--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,5 +51,8 @@ dependencies {
 
     implementation 'com.github.bumptech.glide:glide:4.9.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
+    implementation 'com.google.android.material:material:1.3.0-alpha02'
+
+
 
 }
